# cpp_gol

./: .gitignore  CMakeLists.txt
game_of_life_lib/: CMakeLists.txt  Cell.cpp  Cell.h  GameOfLife.cpp  GameOfLife.h
game_of_life_tests/: CMakeLists.txt
game_of_life_tests/tests/: CMakeLists.txt  GameOfLifeTests.cpp
